--- a/BenTechAPI/BenTechAPI.csproj
+++ b/BenTechAPI/BenTechAPI.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="FastEndpoints" Version="5.34.0" />
+    <PackageReference Include="FastEndpoints.AspVersioning" Version="5.34.0" />
     <PackageReference Include="FastEndpoints.Security" Version="5.34.0" />
     <PackageReference Include="FastEndpoints.Swagger" Version="5.34.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.1" />
